--- a/components/1wire/CMakeLists.txt
+++ b/components/1wire/CMakeLists.txt
@@ -1,3 +1,2 @@
 idf_component_register(SRCS "1wire.c"
-                       PRIV_REQUIRES onewire ds18x20 config
-                       INCLUDE_DIRS ".")
+                       PRIV_REQUIRES onewire ds18x20)
