--- a/components/ethernet/CMakeLists.txt
+++ b/components/ethernet/CMakeLists.txt
@@ -1,2 +1,7 @@
 idf_component_register(SRCS "ethernet.c"
-                       REQUIRES driver esp_eth esp_netif)
+                       REQUIRES 
+                       driver
+                        esp_eth 
+                       esp_netif
+                        vfs 
+                       fatfs)
