--- a/components/systeminfo/CMakeLists.txt
+++ b/components/systeminfo/CMakeLists.txt
@@ -1,1 +1,1 @@
-idf_component_register(SRCS "systeminfo.c" PRIV_REQUIRES esp_netif)
+idf_component_register(SRCS "systeminfo.c" PRIV_REQUIRES esp_netif esp_timer)
