--- a/components/webserver/CMakeLists.txt
+++ b/components/webserver/CMakeLists.txt
@@ -2,10 +2,12 @@ idf_component_register(SRCS "webserver.c" "rest_server.c"
                        PRIV_REQUIRES 
                         esp_netif 
                         esp_http_server 
+                        esp_timer
                         vfs 
                         fatfs
                         nvs 
-                        json
+                        json 
+                        ntc_driver
                        INCLUDE_DIRS ".")
 if(CONFIG_EXAMPLE_WEB_DEPLOY_SF)
     set(WEB_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/data/")
