--- a/components/config/CMakeLists.txt
+++ b/components/config/CMakeLists.txt
@@ -1,1 +1,1 @@
-idf_component_register(SRCS "config.c" PRIV_REQUIRES json esp_event)
+idf_component_register(SRCS "config.c" PRIV_REQUIRES json esp_event onewire ds18x20)
