--- a/components/adc/CMakeLists.txt
+++ b/components/adc/CMakeLists.txt
@@ -1,1 +1,1 @@
-idf_component_register(SRCS "adc.c" PRIV_REQUIRES ntc_driver)
+idf_component_register(SRCS "adc.c" PRIV_REQUIRES ntc_driver esp_event)
