before heap fix

--- a/components/systeminfo/CMakeLists.txt
+++ b/components/systeminfo/CMakeLists.txt
@@ -1,1 +1,4 @@
-idf_component_register(SRCS "systeminfo.c" PRIV_REQUIRES esp_netif esp_timer)
+idf_component_register(
+    SRCS "systeminfo.c" 
+    PRIV_REQUIRES esp_netif esp_timer
+    )
