--- a/config.h.in
+++ b/config.h.in
@@ -1,7 +1,8 @@
 #ifndef CONFIG_H_IN
 #define CONFIG_H_IN
 
-#define FW_VER "1.0.1"
+// See configuration menuconfig APP_PROJECT_VER
+#define FW_VER CONFIG_APP_PROJECT_VER
 #define FW_VER_WEB "1.2"
 
 #endif // CONFIG_H_IN
