--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -15,3 +15,4 @@ dependencies:
   #   # All dependencies of `main` are public by default.
   #   public: true
   espressif/ntc_driver: ^1.1.0
+  espressif/mdns: ^1.7.0
