--- a/components/opentherm/CMakeLists.txt
+++ b/components/opentherm/CMakeLists.txt
@@ -1,4 +1,4 @@
 idf_component_register(
     SRCS "opentherm_operations.c" "opentherm.c"
-    PRIV_REQUIRES driver esp_timer
+    PRIV_REQUIRES driver esp_timer esp_event
     )
