--- a/components/rf433/CMakeLists.txt
+++ b/components/rf433/CMakeLists.txt
@@ -1,4 +1,4 @@
 idf_component_register(
     SRCS "esp32_rf_receiver.c" "rf433.c" 
-    PRIV_REQUIRES esp_timer driver json
+    PRIV_REQUIRES esp_timer driver json esp_event
     )
