move 1w config to 1wire file

--- a/components/1wire/CMakeLists.txt
+++ b/components/1wire/CMakeLists.txt
@@ -1,2 +1,2 @@
 idf_component_register(SRCS "1wire.c"
-                       PRIV_REQUIRES esp_event onewire ds18x20)
+                       PRIV_REQUIRES esp_event onewire ds18x20 json)
