--- a/components/webserver/CMakeLists.txt
+++ b/components/webserver/CMakeLists.txt
@@ -10,6 +10,8 @@ idf_component_register(SRCS "webserver.c" "rest_server.c"
                         ntc_driver
                         mdns_service
                         ota
+                        onewire
+                        ds18x20
                        INCLUDE_DIRS ".")
 if(CONFIG_EXAMPLE_WEB_DEPLOY_SF)
     set(WEB_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/data/")
