--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,16 @@
 # The following five lines of boilerplate have to be in your project's
 # CMakeLists in this exact order for cmake to work correctly
 cmake_minimum_required(VERSION 3.16)
-set(EXTRA_COMPONENT_DIRS "..\\..\\esp-idf-lib\\components")
-
+#set(EXTRA_COMPONENT_DIRS "..\\..\\esp-idf-lib\\components")
 set (FW_VER "1.0.0")
+
+include(FetchContent)
+FetchContent_Declare(
+  espidflib
+  GIT_REPOSITORY https://github.com/UncleRus/esp-idf-lib.git
+)
+FetchContent_MakeAvailable(espidflib)
+set(EXTRA_COMPONENT_DIRS ${espidflib_SOURCE_DIR}/components)
 
 # Specify the configuration file from which the header file will be generated
 configure_file (config.h.in config.h @ONLY)
